@@ -73,7 +73,7 @@ BLKID_LIBS='-L/tools/lib -lblkid'   \
 <para>Create some directories now that are needed for tests, but
 will also be used as a part of installation:</para>
 
-<screen><userinput remap="install">mkdir -pv /lib/{firmware,udev/devices/pts}
+<screen><userinput remap="install">mkdir -pv /lib/{firmware,udev}
 mkdir -pv /lib/udev/rules.d
 mkdir -pv /etc/udev/rules.d</userinput></screen>
 
