@@ -154,15 +154,7 @@ cd ../gcc-build</userinput></screen>
     Link Time Optimization (LTO):</para> 
 
 <screen><userinput remap="install">install -dm755 /usr/lib/bfd-plugins
-pushd /usr/lib/bfd-plugins
-
-if [ $(uname -m) == "i686" ]; then 
-   ln -sfv ../../libexec/gcc/i686-pc-linux-gnu/&gcc-version;/liblto_plugin.so 
-else
-   ln -sfv ../../libexec/gcc/x86_64-unknown-linux-gnu/&gcc-version;/liblto_plugin.so 
-fi
-
-popd</userinput></screen>
+ln -sfv ../../libexec/gcc/$(gcc -dumpmachine)/&gcc-version;/liblto_plugin.so</userinput></screen>
 
     <para>Now that our final toolchain is in place, it is important to again ensure
     that compiling and linking will work as expected. We do this by performing
