@@ -210,18 +210,6 @@ EOF</userinput></screen>
   <sect2>
     <title>Udev Bootscripts</title>
 
-      <para>The first LFS bootscript,
-      <filename>/etc/init.d/mountvirtfs</filename> will copy any devices
-      located in <filename class="directory">/lib/udev/devices</filename> to
-      <filename class="directory">/dev</filename>. This is necessary because
-      some devices, directories, and symlinks are needed before the dynamic
-      device handling processes are available during the early stages of
-      booting a system, or are required by <command>udevd</command> itself.
-      Creating static device nodes in <filename
-      class="directory">/lib/udev/devices</filename> also provides an easy
-      workaround for devices that are not supported by the dynamic device
-      handling infrastructure.</para>
-
       <para>The <filename>/etc/rc.d/init.d/udev</filename> initscript starts
       <command>udevd</command>, triggers any "coldplug" devices that have
       already been created by the kernel and waits for any rules to complete.
