@@ -1,6 +1,6 @@
-<!ENTITY version         "SVN-20140702">
+<!ENTITY version         "SVN-20140708">
 <!ENTITY short-version   "svn">  <!-- Used in dbus chapter, change to x.y for release -->
-<!ENTITY releasedate     "July 02, 2014">
+<!ENTITY releasedate     "July 8, 2014">
 <!ENTITY copyrightdate   "1999-2014"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone       "7.6">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
