@@ -1,3 +1,6 @@
+2014-06-29 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Remove systemd references and files
+
 2014-03-31 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Changes made to be consistent with common systemd functions
 
